; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_atibl.c_atibl_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_atibl.c_atibl_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atibl_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @atibl_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atibl_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.atibl_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.atibl_softc* @device_get_softc(i32 %4)
  store %struct.atibl_softc* %5, %struct.atibl_softc** %3, align 8
  %6 = load %struct.atibl_softc*, %struct.atibl_softc** %3, align 8
  %7 = call i32 @atibl_getlevel(%struct.atibl_softc* %6)
  %8 = load %struct.atibl_softc*, %struct.atibl_softc** %3, align 8
  %9 = getelementptr inbounds %struct.atibl_softc, %struct.atibl_softc* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.atibl_softc*, %struct.atibl_softc** %3, align 8
  %11 = call i32 @atibl_setlevel(%struct.atibl_softc* %10, i32 0)
  ret i32 0
}

declare dso_local %struct.atibl_softc* @device_get_softc(i32) #1

declare dso_local i32 @atibl_getlevel(%struct.atibl_softc*) #1

declare dso_local i32 @atibl_setlevel(%struct.atibl_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
